<resources>
    <string name="app_name">Capstone Project</string>

    <string name="signIn_name">Hoşgeldiniz</string>
    <string name="signIn_description">Hesabınıza giriş yapın ve alışverişin keyfini çıkarın.</string>
    <string name="signIn_to_signUp">Hesabınız yoksa buradan üye olun</string>
    <string name="signInButton_name">Giriş Yap</string>
    <string name="signUpButton_name">Üye Ol</string>
    <string name="signUpPage_title">Yeni bir hesap oluştur</string>
    <string name="name">Ad Soyad</string>
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="password_mismatch_error">Şifreler eşleşmiyor!</string>
    <string name="password_too_short">Şifre en az 6 karakter uzunluğunda olmalıdır!</string>
    <string name="empty">Tüm alanları doldurduğunuzdan emin olun!</string>
    <string name="email_error">E-posta hatalı</string>
    <string name="home">Anasayfa</string>
    <string name="cart">Sepetim</string>
    <string name="favorite">Favorilerim</string>
    <string name="sale_product_text">Süper Fiyat, Süper Teklif</string>
    <string name="search_bar_text">Ürün Ara</string>
    <string name="search">Ara</string>
    <string name="search_hint">Ürün Ara</string>

    <!-- Product Detail -->
    <string name="stock_available">Stok mevcut</string>
    <string name="stock_not_available">Stok mevcut değil</string>
    <string name="stock_almost_empty">Stok tükenmek üzere!</string>
    <string name="last_n_product_left">Son %1$d ürün kaldı!</string>
    <string name="add_favorite_success">Favorilere eklendi.</string>
    <string name="add_favorite_error">Favorilere eklerken bir hata oluştu.</string>

    <string name="unknown">Bilgi alınamadı.</string>
    <string name="edittext_empty_error">Bu alan boş bırakılamaz!</string>
    <string name="forgot_password_empty_email_warning">Şifre sıfırlamak için email adresinizi kontrol edin</string>
    <string name="select">Seç</string>
    <string name="warning_message">UYARI</string>
    <string name="hint_enter_all_information">Tüm bilgileri girin.</string>
    <string name="ok">Tamam</string>

    <string name="subtotal_text">Ara Toplam:</string>
    <string name="label_shipping">Kargo:</string>
    <string name="total_payment_label">Toplam Ödeme:</string>
    <string name="payment_button_text">Ödeme Yap</string>
    <string name="cart_title">Sepetim</string>

    <string name="favorites_title">Favorilerim</string>
    <string name="add_card">Sepete Ekle</string>

    <string name="update_password">Şifremi Güncelle</string>
    <string name="card_number">XXXX XXXX XXXX 3947</string>
    <string name="card_name">AYŞE YILDIZ</string>
    <string name="card_valid_thru">VALID\nTHRU</string>
    <string name="card_month_year">: 12/26</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="card_number_text">Kart Numarası</string>
    <string name="month">Ay</string>
    <string name="year">Yıl</string>
    <string name="cvv">CVV</string>
    <string name="address_description">Açık adresinizi aşağıdaki alana giriniz</string>
    <string name="address_text">Adres bilgilerini girin</string>
    <string name="complete_order_text">Siparişi Tamamla</string>

    <string name="forgot_password_text">Şifremi unuttum</string>
    <string name="payment_complete_text">Ödeme tamamlandı.</string>
    <string name="home_text">Anasayfa</string>
    <string name="payment_page_message_text">Fatura mail adresine gönderilecek.</string>
    <string name="name_hint">İsim</string>
    <string name="phone_hint">Telefon</string>
    <string name="address_hint">Adres</string>
    <string name="update_hint">Güncelle</string>
    <string name="password_empty">Parola alanı boş bırakılamaz!</string>
    <string name="product_text">Tüm Ürünlere Göz Atın</string>

    <!-- Arrays -->
    <string-array name="month_list">
        <item name="january">01</item>
        <item name="february">02</item>
        <item name="march">03</item>
        <item name="april">04</item>
        <item name="may">05</item>
        <item name="june">06</item>
        <item name="july">07</item>
        <item name="august">08</item>
        <item name="september">09</item>
        <item name="october">10</item>
        <item name="november">11</item>
        <item name="december">12</item>
    </string-array>

    <string-array name="year_list">
        <item name="year_23">23</item>
        <item name="year_24">24</item>
        <item name="year_25">25</item>
        <item name="year_26">26</item>
        <item name="year_27">27</item>
        <item name="year_28">28</item>
        <item name="year_29">29</item>
        <item name="year_30">30</item>
        <item name="year_31">31</item>
        <item name="year_32">32</item>
        <item name="year_33">33</item>
        <item name="year_34">34</item>
    </string-array>

</resources>