<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_graph"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/search_graph"
        android:icon="@drawable/baseline_search_24"
        android:menuCategory="secondary"
        android:title="@string/search" />

    <item
        android:id="@+id/cart_graph"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:menuCategory="secondary"
        android:title="@string/cart" />

    <item
        android:id="@+id/favorites_graph"
        android:icon="@drawable/baseline_favorite_border_24"
        android:menuCategory="secondary"
        android:title="@string/favorite" />
</menu>